    SLcmd_Cmd_Type object.
53. src/slarith.c: The return value of fmod was being truncated to
    single precision.
54. doc/tm/cslang.tm: COLORTERM was used instead of COLORFGBG (Nathan
    Stratton Treadway).
55. configure,*/Makefile.in: Haiku systems do not require -lm.  -lm
    was replaced */Makefile.in by @M_LIB@ which is not set from the
    configure script. (Scott McCreary)

{{{ Previous Versions

Changes since 2.1.2
1. autoconf/Makefile.in: If any */Makefile.in is more recent than the
   corresponding Makefile, request that the configure script be rerun.
2. src/slcmplex.c: If the complex number z is 0, then return 1 for z^0.
3. src/slerr.c: SLang_set_error: If the error code is
   SL_UserBreak_Error, then do not add a string representation to the
   queue in case this function was called from a signal handler.  This
   avoids a call to malloc, which is generally a bad idea on systems
   where malloc is not reentrant.
4. slsh/lib/sldbcore.sl: The "c" alias was not working.  (John Houck)
5. src/slsmg.c: Avoid a possible segv if SLsmg_Scroll_Hash_Border is
   greater than the display size. (Miroslav Lichvar).
6. src/slang.c: Line number information was not always getting
   propagated in slang code involving function dereferences, e.g.,
   (@funcptr)(args).  The bug-fix checks to see that funcptr is
   callable.
7. src/slparse.c: Generate bos/eos byte-code for empty code blocks,
   e.g., while (1){}.
8. lib/sldbcore.sl: When exiting the debugger via the "exit" command,
   the old SIGINT handler was not getting installed.
9. src/slang.c: Make sure check_signals gets called when returning
   from inner_interp.
10. src/slsig.c: If a slang script establishes a signal handler for
    SIGINT, then set SLKeyBoard_Quit to 1 if SIGINT is received.
11. src/slstruct.c: New intrinsic:__add_typecast.  This may be used to
    define a typecast function for a user-defined type.
12. autoconf/aclocal.m4: Added support for ncurses5-config to query